Fix for webservice add button jump

--- a/WebContent/styles/properties.css
+++ b/WebContent/styles/properties.css
@@ -462,6 +462,10 @@ td.paddingLeft5 {
 	margin-top:-1px;
 }
 
+.webserviceTable button {
+	margin-top:10px;
+}
+
 span.webserviceTitle {
 	display: block;
 	margin-top: 4px;
